--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+   background: radial-gradient(red 5%, yellow 15%, green 60%) 100%;
+   min-height: 100vh;
 }
