add new features

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -8,7 +8,11 @@ src: local('SEGA LOGO FONT'), url('SEGA.woff') format('woff');
 }
 h1{
 	font-family: 'SEGA LOGO FONT';
-	color: #fff;
 	font-weight: 200;
 	color: #0ccac4;
+}
+h3{
+	color: #fff;
+	font-weight: 200;
+	
 }
