--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -16,3 +16,22 @@ h3{
 	font-weight: 200;
 	
 }
+@keyframes lazyload-placeholder {
+  to {transform: rotate(360deg);}
+}
+ 
+.lazyload-placeholder:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -30px;
+  margin-left: -30px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  border-top-color: #333;
+  animation: lazyload-placeholder .6s linear infinite;
+}
